--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   <div class="box-content">
     <h1>Social Media</h1>
     <div class="bio-description" style="margin-top:12px;">
-      <a href="https://instagram.com" target="_blank" class="link" style="margin-bottom:8px;"><span>📸 Instagram</span></a>
-      <a href="https://twitter.com" target="_blank" class="link" style="margin-bottom:8px;"><span>✖ X</span></a>
-      <a href="https://youtube.com" target="_blank" class="link" style="margin-bottom:8px;"><span>▶️ Youtube</span></a>
-      <a href="mailto:example@email.com" target="_blank" class="link" style="margin-bottom:8px;"><span>✉ Email</span></a>
+      <a href="https://www.instagram.com/foruxy_/" target="_blank" class="link" style="margin-bottom:8px;"><span>📸 Instagram</span></a>
+      <a href="https://x.com/Foruxy" target="_blank" class="link" style="margin-bottom:8px;"><span>✖ Twitter</span></a>
+      <a href="https://www.youtube.com/@Foruxy" target="_blank" class="link" style="margin-bottom:8px;"><span>▶️ Youtube</span></a>
+      <a href="https://discord.com/users/797770498745303092" target="_blank" class="link" style="margin-bottom:8px;"><span>✉ Discord</span></a>
     </div>
   </div>
 </div>
@@ -285,10 +285,24 @@ const CONFIG = {
     { label: "🌐 Social", url: "#social" }
   ],
   myWork: [
-    { image: "https://i.imgur.com/1h5N3bM.png", name: "Discord Paradise", owner: "Foruxy", date: "23 Desember 2025" },
-    { image: "https://i.imgur.com/1h5N3bM.png", name: "Discord Paradise", owner: "Foruxy", date: "23 Desember 2025" },
-    { image: "https://i.imgur.com/1h5N3bM.png", name: "Discord Paradise", owner: "Foruxy", date: "23 Desember 2025" },
-    { image: "https://i.imgur.com/8g1L2J5.png", name: "Creative Hub", owner: "Foruxy", date: "15 Januari 2025" }
+    { image: "https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png", 
+     name: "Yasei Pyon’s Zoological Society", owner: "Yasei Pyon", date: "07 July 2025" },
+    { image: "https://cdn.discordapp.com/icons/1431225172614054000/6db71b7db347b180f8ae28997a074631.png", 
+     name: "Hidden Peak ❄", owner: "Eseuri Krasu", date: "24 October 2025" },
+    { image: "https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png", 
+     name: "World Of Usagi🐰", owner: "Firany", date: "12 September 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png", 
+     name: "Kira's Aquarium🐟", owner: "Kira Maguro", date: "12 Desember 2025" },
+    { image: "https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png", 
+     name: "Fowl Base", owner: "Foruxy", date: "27 Desember 2020" },
+    { image: "https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png", 
+     name: "(Private) Clanen's Fluffytopia🍭", owner: "Clara Nefia", date: "11 Juni 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png", 
+     name: "Amaryn Pastry Shop🎂", owner: "Amaryn", date: "21 Agustus 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449766831710797826/748c5a036ff163c8bd67989f7a64b42b.png", 
+     name: "Kayce Pavilion", owner: "Kayce Lawrence", date: "14 Desember 2025" },
+    { image: "https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png", 
+     name: "[ 𝓚.𝓐.𝓒 ]𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂", owner: "Kaikaje", date: "14 Agustus 2025" }
   ]
 };
 
