--- a/index.html
+++ b/index.html
@@ -249,9 +249,10 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
     <h1 id="about-name"></h1>
     <p id="about-tagline"></p>
     <div class="bio-description">
-      Halo! Aku Foruxy, seorang Vtuber Talent Manager dan Discord Server Manager.  
-      Aku suka membuat konten kreatif, mengelola komunitas, dan membantu talenta Vtuber berkembang.  
-      Selamat datang di profilku!
+      Hawrru~! 🐾 I'm Foruxy, the Silver Catfox~ ✨
+      I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!
+      I also help as a Vtuber Advisor, Counselor, and Helper 🐱💖
+      I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.
     </div>
   </div>
 </div>
