--- a/index.html
+++ b/index.html
@@ -147,52 +147,27 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 
 /* PAPER BOX */
 .paper-box{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  position:fixed; top:0; left:0; width:100%; height:100%;
+  display:flex; justify-content:center; align-items:center;
   background: rgba(0,0,0,0.5);
-  z-index:2;
-  opacity:0;
-  pointer-events:none;
+  z-index:2; opacity:0; pointer-events:none;
   transition: opacity 0.3s ease;
 }
+.paper-box.active{ opacity:1; pointer-events:auto; }
 
-.paper-box.active{ 
-  opacity:1; 
-  pointer-events:auto; 
+.paper-box .box-content{
+  background:rgba(2,6,23,.95); color:#e5e7eb;
+  border-radius:22px; padding:26px;
+  max-width:400px; width:90%;
+  box-shadow:0 30px 70px rgba(0,0,0,.8);
+  backdrop-filter:blur(16px);
+  transform: scale(0.8);
+  transition: transform 0.3s ease;
 }
+.paper-box.active .box-content{ transform: scale(1); }
 
-/* ===== ABOUT ME STYLE ===== */
-.about-content {
-  text-align: center;
-}
-
-.about-text {
-  margin-top: 16px;
-  text-align: left;
-  font-size: 0.95rem;
-  line-height: 1.6;
-  color: #e5e7eb;
-}
-
-.about-text p {
-  margin-bottom: 10px;
-}
-
-.about-text strong {
-  color: var(--accent);
-}
-
-.about-highlight {
-  background: rgba(56,189,248,0.12);
-  border-left: 4px solid var(--accent);
-  padding: 10px 12px;
-  border-radius: 8px;
+.paper-box .close-trigger{
+  position:absolute; top:0; left:0; width:100%; height:100%; cursor:pointer;
 }
 
 /* MY WORK STYLING */
