--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ body{
 /* MAIN CONTAINER */
 .container{
   width:100%; 
-  max-width:400px; 
-  padding:30px; 
+  max-width:380px; 
+  padding:26px; 
   text-align:center;
   background:rgba(2,6,23,.85); 
   backdrop-filter:blur(16px);
@@ -176,17 +176,6 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   overflow-y: auto;
   padding-right: 8px;
 }
-  .mywork-name{
-  word-break: break-word;
-  line-height: 1.4;
-}
-
-/* RESPONSIVE UNTUK HP */
-@media (max-width: 600px) {
-  #workBox .box-content{
-    max-width: 92%;
-  }
-}
 #workContent::-webkit-scrollbar {
   width: 6px;
 }
@@ -210,8 +199,8 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   margin-bottom:12px;
 }
 .mywork-image{
-  width:110px;
-  height:110px;
+  width:100px;
+  height:100px;
   object-fit:cover;
   border-radius:12px;
   border:2px solid var(--accent);
@@ -253,35 +242,20 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 </div>
 
 <!-- OVERLAY BOXES -->
-<div class="box-content about-content">
-  <div class="avatar-wrapper">
-    <div class="avatar"></div>
-  </div>
-
-  <h1 id="about-name"></h1>
-  <p id="about-tagline"></p>
-
-  <div class="about-text">
-    <p>Hawrru~! I'm <strong>Foruxy</strong>, the Silver Catfox~</p>
-
-    <p>
-      I create <strong>Vtuber Discord servers</strong>, manage
-      <strong>Vtuber communities</strong>, and moderate
-      <strong>YouTube channels</strong>.
-    </p>
-
-    <p>
-      I also help as a <strong>Vtuber Advisor</strong>,
-      <strong>Counselor</strong>, and <strong>Helper</strong>.
-    </p>
-
-    <p class="about-highlight">
-      ✨ Started since <strong>February 2025</strong>, I’m dedicated to
-      supporting Vtubers and growing communities with creativity and care.
-    </p>
+<div class="paper-box" id="aboutBox">
+  <div class="close-trigger"></div>
+  <div class="box-content">
+    <div class="avatar-wrapper"><div class="avatar"></div></div>
+    <h1 id="about-name"></h1>
+    <p id="about-tagline"></p>
+    <div class="bio-description">
+      Hawrru~! I'm Foruxy, the Silver Catfox~
+      I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!
+      I also help as a Vtuber Advisor, Counselor, and Helper.
+      I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.
+    </div>
   </div>
 </div>
-
 
 <div class="paper-box" id="workBox">
   <div class="close-trigger"></div>
