--- a/index.html
+++ b/index.html
@@ -146,13 +146,21 @@ p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}
 footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 
 /* PAPER BOX */
-.paper-box{
-  position:fixed; top:0; left:0; width:100%; height:100%;
-  display:flex; justify-content:center; align-items:center;
-  background: rgba(0,0,0,0.5);
-  z-index:2; opacity:0; pointer-events:none;
-  transition: opacity 0.3s ease;
+.paper-box .box-content{
+  background:rgba(2,6,23,.95); 
+  color:#e5e7eb;
+  border-radius:22px; 
+  padding:40px;       /* padding lebih lega */
+  max-width:600px;    /* lebih lebar */
+  width:90%;
+  max-height:80%;     /* agar tidak terlalu tinggi di layar kecil */
+  overflow-y:auto;    /* scroll jika bio panjang */
+  box-shadow:0 30px 70px rgba(0,0,0,.8);
+  backdrop-filter:blur(16px);
+  transform: scale(0.8);
+  transition: transform 0.3s ease;
 }
+
 .paper-box.active{ opacity:1; pointer-events:auto; }
 
 .paper-box .box-content{
