--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@ body{
 /* MAIN CONTAINER */
 .container{
   width:100%; 
-  max-width:380px; 
-  padding:26px; 
+  max-width:500px; 
+  padding:30px; 
   text-align:center;
   background:rgba(2,6,23,.85); 
   backdrop-filter:blur(16px);
-  border-radius:22px; 
+  border-radius:20px; 
   border:1px solid rgba(255,255,255,.08);
   box-shadow:0 30px 70px rgba(0,0,0,.8); 
   position:relative; 
@@ -146,27 +146,19 @@ p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}
 footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 
 /* PAPER BOX */
-.paper-box .box-content{
-  background:rgba(2,6,23,.95); 
-  color:#e5e7eb;
-  border-radius:22px; 
-  padding:40px;       /* padding lebih lega */
-  max-width:600px;    /* lebih lebar */
-  width:90%;
-  max-height:80%;     /* agar tidak terlalu tinggi di layar kecil */
-  overflow-y:auto;    /* scroll jika bio panjang */
-  box-shadow:0 30px 70px rgba(0,0,0,.8);
-  backdrop-filter:blur(16px);
-  transform: scale(0.8);
-  transition: transform 0.3s ease;
+.paper-box{
+  position:fixed; top:0; left:0; width:100%; height:100%;
+  display:flex; justify-content:center; align-items:center;
+  background: rgba(0,0,0,0.5);
+  z-index:2; opacity:0; pointer-events:none;
+  transition: opacity 0.3s ease;
 }
-
 .paper-box.active{ opacity:1; pointer-events:auto; }
 
 .paper-box .box-content{
   background:rgba(2,6,23,.95); color:#e5e7eb;
   border-radius:22px; padding:26px;
-  max-width:400px; width:90%;
+  max-width:500px; width:100%;
   box-shadow:0 30px 70px rgba(0,0,0,.8);
   backdrop-filter:blur(16px);
   transform: scale(0.8);
@@ -180,12 +172,12 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 
 /* MY WORK STYLING */
 #workContent{
-  max-height: 560px; /* tinggi untuk 3 item */
+  max-height: 500px; /* tinggi untuk 3 item */
   overflow-y: auto;
   padding-right: 8px;
 }
 #workContent::-webkit-scrollbar {
-  width: 6px;
+  width: 4px;
 }
 #workContent::-webkit-scrollbar-thumb {
   background-color: var(--accent);
@@ -221,7 +213,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   color:#e5e7eb;
 }
 .mywork-name, .mywork-owner, .mywork-date{
-  font-size:0.95rem;
+  font-size:0.80rem;
 }
 .mywork-name strong, .mywork-owner strong, .mywork-date strong{
   color:var(--accent);
