--- a/index.html
+++ b/index.html
@@ -245,10 +245,15 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 <div class="paper-box" id="aboutBox">
   <div class="close-trigger"></div>
   <div class="box-content">
-    <div class="avatar-wrapper"><div class="avatar"></div></div>
-    <h1 id="about-name"></h1>
-    <p id="about-tagline"></p>
-    <div class="bio-description">
+    <div class="avatar-wrapper">
+      <div class="avatar"></div>
+    </div>
+
+    <h1 id="about-name">Foruxy</h1>
+    <p id="about-race"><strong>Ras:</strong> Silver Catfox</p>
+
+    <div class="bio-description" style="white-space: pre-line;">
+      <strong>Bio:</strong>
       Hawrru~! I'm Foruxy, the Silver Catfox~
       I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!
       I also help as a Vtuber Advisor, Counselor, and Helper.
@@ -256,6 +261,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
     </div>
   </div>
 </div>
+
 
 <div class="paper-box" id="workBox">
   <div class="close-trigger"></div>
@@ -303,7 +309,7 @@ const CONFIG = {
     { image: "https://cdn.discordapp.com/icons/1449766831710797826/748c5a036ff163c8bd67989f7a64b42b.png", 
      name: "Kayce Pavilion", owner: "Kayce Lawrence", date: "14 Desember 2025" },
     { image: "https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png", 
-     name: "[ 𝓚.𝓐.𝓒 ]𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂", owner: "Kaikaje", date: "14 Agustus 2025" }
+     name: "𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂", owner: "Kaikaje", date: "14 Agustus 2025" }
   ]
 };
 
