--- a/index.html
+++ b/index.html
@@ -245,19 +245,14 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 <div class="paper-box" id="aboutBox">
   <div class="close-trigger"></div>
   <div class="box-content">
-    <div class="avatar-wrapper">
-      <div class="avatar"></div>
-    </div>
-
-    <h1 id="about-name">Foruxy</h1>
-    <p id="about-race"><strong>Ras:</strong> Silver Catfox</p>
-
-    <div class="bio-description" style="white-space: pre-line;">
-      <strong>Bio:</strong>
-      Hawrru~! I'm Foruxy, the Silver Catfox~
-      I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!
-      I also help as a Vtuber Advisor, Counselor, and Helper.
-      I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.
+    <div class="avatar-wrapper"><div class="avatar"></div></div>
+    <h1 id="about-name"></h1>
+    <p id="about-tagline"></p>
+    <div class="bio-description">
+      <p>Hawrru~! I'm Foruxy, the Silver Catfox~</p>
+      <p>I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!</p>
+      <p>I also help as a Vtuber Advisor, Counselor, and Helper.</p>
+      <p>I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.</p>
     </div>
   </div>
 </div>
