--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
     <h1 id="about-name"></h1>
     <p id="about-tagline"></p>
     <div class="bio-description">
-      <p>Hawrru~! I'm Foruxy, the Silver Catfox~</p>
-      <p>I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!</p>
-      <p>I also help as a Vtuber Advisor, Counselor, and Helper.</p>
-      <p>I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.</p>
+      Hawrru~! I'm Foruxy, the Silver Catfox~<br>
+      I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!<br>
+      I also help as a Vtuber Advisor, Counselor, and Helper.<br>
+      I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.<br>
     </div>
   </div>
 </div>
@@ -287,61 +287,25 @@ const CONFIG = {
     { label: "🌐 Social", url: "#social" }
   ],
   myWork: [
-    { 
-        "image": "https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png", 
-        "name": "Yasei Pyon’s Zoological Society", 
-        "owner": "Yasei Pyon", 
-        "creation date": "07 July 2025" 
-    },
-    { 
-        "image": "https://cdn.discordapp.com/icons/1431225172614054000/6db71b7db347b180f8ae28997a074631.png", 
-        "name": "Hidden Peak ❄", 
-        "owner": "Eseuri Krasu", 
-        "creation date": "24 October 2025" 
-    },
-    { 
-        "image": "https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png", 
-        "name": "World Of Usagi 🐰", 
-        "owner": "Firany", 
-        "creation date": "12 September 2025" 
-    },
-    { 
-        "image": "https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png", 
-        "name": "Kira's Aquarium 🐟", 
-        "owner": "Kira Maguro", 
-        "creation date": "12 December 2025" 
-    },
-    { 
-        "image": "https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png", 
-        "name": "Fowl Base", 
-        "owner": "Foruxy", 
-        "creation date": "27 December 2020" 
-    },
-    { 
-        "image": "https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png", 
-        "name": "(Private) Clanen's Fluffytopia 🍭", 
-        "owner": "Clara Nefia", 
-        "creation date": "11 June 2025" 
-    },
-    { 
-        "image": "https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png", 
-        "name": "Amaryn Pastry Shop 🎂", 
-        "owner": "Amaryn", 
-        "creation date": "21 August 2025" 
-    },
-    { 
-        "image": "https://cdn.discordapp.com/icons/1449766831710797826/748c5a036ff163c8bd67989f7a64b42b.png", 
-        "name": "Kayce Pavilion", 
-        "owner": "Kayce Lawrence", 
-        "creation date": "14 December 2025" 
-    },
-    { 
-        "image": "https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png", 
-        "name": "𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂", 
-        "owner": "Kaikaje", 
-        "creation date": "14 August 2025" 
-    }
-]
+    { image: "https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png", 
+     name: "Yasei Pyon’s Zoological Society", owner: "Yasei Pyon", date: "07 July 2025" },
+    { image: "https://cdn.discordapp.com/icons/1431225172614054000/6db71b7db347b180f8ae28997a074631.png", 
+     name: "Hidden Peak ❄", owner: "Eseuri Krasu", date: "24 October 2025" },
+    { image: "https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png", 
+     name: "World Of Usagi🐰", owner: "Firany", date: "12 September 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png", 
+     name: "Kira's Aquarium🐟", owner: "Kira Maguro", date: "12 Desember 2025" },
+    { image: "https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png", 
+     name: "Fowl Base", owner: "Foruxy", date: "27 Desember 2020" },
+    { image: "https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png", 
+     name: "(Private) Clanen's Fluffytopia🍭", owner: "Clara Nefia", date: "11 Juni 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png", 
+     name: "Amaryn Pastry Shop🎂", owner: "Amaryn", date: "21 Agustus 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449766831710797826/748c5a036ff163c8bd67989f7a64b42b.png", 
+     name: "Kayce Pavilion", owner: "Kayce Lawrence", date: "14 Desember 2025" },
+    { image: "https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png", 
+     name: "𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂", owner: "Kaikaje", date: "14 Agustus 2025" }
+  ]
 };
 
 /* SETUP HALAMAN */
@@ -369,9 +333,9 @@ CONFIG.myWork.forEach(item=>{
   div.innerHTML=`
     <img src="${item.image}" alt="Server Discord" class="mywork-image">
     <div class="mywork-desc">
-      <div class="mywork-name"><strong>Nama Server:</strong> ${item.name}</div>
+      <div class="mywork-name"><strong>Server Name:</strong> ${item.name}</div>
       <div class="mywork-owner"><strong>Owner:</strong> ${item.owner}</div>
-      <div class="mywork-date"><strong>Dibuat:</strong> ${item.date}</div>
+      <div class="mywork-date"><strong>Creation Date:</strong> ${item.date}</div>
     </div>
   `;
   workContent.appendChild(div);
