--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
     <div class="avatar"></div>
   </div>
   <div class="about-text">
-    <h1>Foruxy</h1>
-    <p><strong>Ras:</strong> Silver Catfox</p>
+    <h1 id="about-name">Foruxy</h1> <!-- PERLU ID -->
+    <p id="about-tagline"><strong>Ras:</strong> Silver Catfox</p> <!-- PERLU ID -->
     <div class="bio-description">
       Hawrru~! I'm Foruxy, the Silver Catfox~<br>
       I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!<br>
@@ -316,6 +316,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
     </div>
   </div>
 </div>
+
 
 
 
