--- a/index.html
+++ b/index.html
@@ -244,13 +244,10 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 <!-- OVERLAY BOXES -->
 <div class="paper-box" id="aboutBox">
   <div class="close-trigger"></div>
-<div class="box-content">
-  <div class="avatar-wrapper">
-    <div class="avatar"></div>
-  </div>
-  <div class="about-text">
-    <h1 id="about-name">Foruxy</h1> <!-- PERLU ID -->
-    <p id="about-tagline"><strong>Ras:</strong> Silver Catfox</p> <!-- PERLU ID -->
+  <div class="box-content">
+    <div class="avatar-wrapper"><div class="avatar"></div></div>
+    <h1 id="about-name"></h1>
+    <p id="about-tagline"></p>
     <div class="bio-description">
       Hawrru~! I'm Foruxy, the Silver Catfox~<br>
       I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!<br>
@@ -259,7 +256,6 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
     </div>
   </div>
 </div>
-
 
 
 <div class="paper-box" id="workBox">
