--- a/index.html
+++ b/index.html
@@ -170,6 +170,16 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   position:absolute; top:0; left:0; width:100%; height:100%; cursor:pointer;
 }
 
+/* ABOUT BOX - UKURAN LEBIH BESAR */
+#aboutBox .box-content {
+  max-width: 700px; /* Lebih lebar dari default 500px */
+  font-size: 1rem; /* Font size sedikit lebih besar untuk readability */
+}
+#aboutBox .bio-description {
+  font-size: 1rem; /* Font size bio lebih besar */
+  line-height: 1.5; /* Line height sedikit lebih besar untuk kenyamanan baca */
+}
+
 /* MY WORK STYLING */
 #workContent{
   max-height: 500px; /* tinggi untuk 3 item */
@@ -394,26 +404,4 @@ document.querySelectorAll(".box-content").forEach(box=> box.addEventListener("cl
 const loadingScreen = document.getElementById("loadingScreen");
 const loadingBar = document.getElementById("loadingBar");
 let width = 0;
-const totalTime = 6000; // 6 detik
-const intervalTime = 30;
-const increment = 100 / (totalTime / intervalTime);
-
-const loadingInterval = setInterval(()=>{
-  width += increment;
-  if(width >= 100) width = 100;
-  loadingBar.style.width = width + "%";
-}, intervalTime);
-
-setTimeout(()=>{
-  clearInterval(loadingInterval);
-  loadingScreen.style.opacity = 0;
-  setTimeout(()=>{
-    loadingScreen.style.display = "none";
-    document.querySelector(".container").classList.add("show");
-  }, 500);
-}, totalTime);
-
-</script>
-
-</body>
-</html>
+const totalTime = 6000
