--- a/index.html
+++ b/index.html
@@ -63,11 +63,7 @@ body{
   width:0%;
   height:100%;
   background:#38bdf8;
-  animation: load 6s linear forwards; /* Animasi CSS untuk loading bar */
-}
-@keyframes load {
-  0% { width: 0%; }
-  100% { width: 100%; }
+  transition: width 0.1s linear;
 }
 
 /* CURSOR */
@@ -151,7 +147,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 
 /* PAPER BOX */
 .paper-box{
-  position:fixed; top:0; left:0; width:100%; height:100%;
+  position:fixed; top:0; left:0; width:120%; height:120%;
   display:flex; justify-content:center; align-items:center;
   background: rgba(0,0,0,0.5);
   z-index:2; opacity:0; pointer-events:none;
@@ -172,16 +168,6 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 
 .paper-box .close-trigger{
   position:absolute; top:0; left:0; width:100%; height:100%; cursor:pointer;
-}
-
-/* ABOUT BOX - UKURAN LEBIH BESAR */
-#aboutBox .box-content {
-  max-width: 700px; /* Lebih lebar dari default 500px */
-  font-size: 1rem; /* Font size sedikit lebih besar untuk readability */
-}
-#aboutBox .bio-description {
-  font-size: 1rem; /* Font size bio lebih besar */
-  line-height: 1.5; /* Line height sedikit lebih besar untuk kenyamanan baca */
 }
 
 /* MY WORK STYLING */
@@ -404,4 +390,30 @@ document.querySelectorAll(".close-trigger").forEach(trigger=>{
 });
 document.querySelectorAll(".box-content").forEach(box=> box.addEventListener("click", e=> e.stopPropagation()));
 
-/* LOADING SCREEN - DIPERBAIKI DENGAN CSS AN
+/* LOADING SCREEN 6 DETIK */
+const loadingScreen = document.getElementById("loadingScreen");
+const loadingBar = document.getElementById("loadingBar");
+let width = 0;
+const totalTime = 6000; // 6 detik
+const intervalTime = 30;
+const increment = 100 / (totalTime / intervalTime);
+
+const loadingInterval = setInterval(()=>{
+  width += increment;
+  if(width >= 100) width = 100;
+  loadingBar.style.width = width + "%";
+}, intervalTime);
+
+setTimeout(()=>{
+  clearInterval(loadingInterval);
+  loadingScreen.style.opacity = 0;
+  setTimeout(()=>{
+    loadingScreen.style.display = "none";
+    document.querySelector(".container").classList.add("show");
+  }, 500);
+}, totalTime);
+
+</script>
+
+</body>
+</html>
